# docextract

./: .claudeignore  .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CASE_STUDY.md  CONTRIBUTING.md  DECISIONS.md  DEMO.md  Dockerfile  Dockerfile.frontend  Dockerfile.worker  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  locust.conf  mcp_server.py  offer-kit.yaml  promptfooconfig.yaml  pyproject.toml  render.yaml  requirements-msg.txt  requirements.txt  requirements_ci.txt  requirements_demo.txt  requirements_full.txt  streamlit_demo.py
.claude/: CLAUDE.md  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  eval-gate.yml  warmup.yml
.streamlit/: config.toml
alembic/: env.py
app/: config.py  dependencies.py  langsmith_tracing.py  logging_config.py  main.py  observability.py
app/api/: roi.py  (+18 more)
autoresearch/: DEPRECATED.md  __init__.py  baseline.json  eval.py  eval_dataset.json  eval_dataset_72.json  fixtures.py  program.md  prompts.yaml  reporter.py
deploy/: COST_ANALYSIS.md  README.md
docs/: AI_GOVERNANCE_FRAMEWORK.md  ARCHITECTURE.md  COMPLIANCE.md  KNOWLEDGE_MANAGEMENT_GUIDE.md  PRODUCTION_CASE_STUDY.md  PRODUCTIZATION_CONTINUATION_CHECKLIST.md  SECURITY.md  certifications.md  claude_desktop_config.example.json  client_onboarding_runbook.md  cost-model.md  eval-failure-analysis.md  eval-guide.md  eval-methodology.md  mcp-integration.md  metering-runbook.md  performance-baselines.md  portfolio-metrics.yaml  productization_api.md  release_checklist.md  slo.md
eval_artifacts/: variance_baseline.json
evals/: CHANGELOG.md  README.md  adversarial_set.jsonl  golden_set.jsonl  promptfoo_tests.jsonl
frontend/: api_client.py  app.py  dashboard_helpers.py  demo_mode.py  theme.py
notebooks/: fine_tuning_comparison.ipynb
prompts/: CHANGELOG.md
scripts/: audit_portfolio_claims.py  bench_caching.py  benchmark.py  benchmark_sroie.py  build_eval_dataset_72.py  check_metrics_ledger.py  cleanup_storage.py  eval_adapter.py  eval_braintrust.py  eval_drift_record.py  eval_gate.py  eval_llm_judge.py  eval_multiprovider.py  eval_offline_replay.py  eval_ragas.py  eval_run_72.py  eval_variance_baseline.py  expand_eval_corpus_v2.py  generate_promptfoo_tests.py  langfuse_demo.py  migrate_fixtures_to_jsonl.py  notify_slack.py  prompt_lint.py  run_eval_ci.py  seed_api_key.py  seed_demo.py  seed_sample_docs.py  smoke_productization.sh  sync_langfuse.py  train_dpo.py  train_qlora.py
site/: README.md  index.html  styles.css
tests/: conftest.py
worker/: events.py  judge_tasks.py  main.py  tasks.py
(+362 files in other folders)
