[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["UP035"]
"tests/conftest.py" = ["E402"]
"tests/unit/test_feedback.py" = ["E402"]
"tests/integration/*" = ["N806"]
"tests/unit/test_llm_tracer.py" = ["F841"]
"scripts/eval_ragas.py" = ["F821"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"
markers = [
    "e2e: end-to-end tests that hit real external services (deselect with '-m not e2e')",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
